--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <div class="filter">
                 <div class="select-box">
                     <select>
-                        <option selected value="default">Ordenação Padrão</option>
+                        <option selected value="default">Ordenação Aleatória</option>
                         <optgroup label="Ordem Alfabética">
                             <option value="A-Z">A-Z</option>
                             <option value="Z-A">Z-A</option>
